# agentic-ai

./: .gitignore  README.md  config.yaml  pyproject.toml
src/app/: main.py
src/app/endpoints/: chat.py  health.py  knowledge.py
src/middleware/: auth.py
src/models/: config.py  requests.py  responses.py
src/services/: conversation.py  knowledge.py  llm_client.py
